# Programs

./: .gitignore  Hanoi.py  Hemp.py  README.md  StockDashboard.pi5  ants.py  buzzer.py  buzzer_HB.py  cpu_temp.py  cpu_temp_1.py  cpu_temp_zero.py  green.py  guess.go  guess.py  holdings.json  july4th.py  mqtt_receiver.py  mqtt_receiver_1.py  mqtt_sender.py  mqtt_sender_1.py  quiz1.py  ram_usage.py  rgb-fast-random.py  rgb-flash.py  rgb-random.py  rgb.py  rgb_music.py  stocks.py  test_pyqt.py  waveshare.py  waveshare_BD.py
LCD1602_I2C_Module_Demo/: README.md
LCD1602_I2C_Module_Demo/Arduino/Waveshare_LCD1602/: README_CN.md
LCD1602_I2C_Module_Demo/Arduino/Waveshare_LCD1602/src/: Waveshare_LCD1602.cpp
LCD1602_I2C_Module_Demo/Jetson Nano/python/: README.md  README_CN.md
LCD1602_I2C_Module_Demo/Jetson Nano/python/examples/: Character_display.py  Custom_char.py  Direction_control.py  Scroll_display.py
LCD1602_I2C_Module_Demo/Jetson Nano/python/lib/: LCD1602.py
LCD1602_I2C_Module_Demo/Pico/arduino/Waveshare_LCD1602/: README.md  keywords.txt
LCD1602_I2C_Module_Demo/Pico/c/: CMakeLists.txt  Readme.md  ReadmeCN.md  main.c
LCD1602_I2C_Module_Demo/Pico/c/examples/: CMakeLists.txt  Custom_char.c  Direction_control.c  Display_time.c  LCD_Test.h  Scroll_display.c
LCD1602_I2C_Module_Demo/Pico/python/: README.md  README_CN.md
LCD1602_I2C_Module_Demo/Raspberry/c/: Makefile  Readme.md  ReadmeCN.md
LCD1602_I2C_Module_Demo/Raspberry/python/: README.md  README_CN.md
LCD1602_I2C_Module_Demo/esp32/python/: README.md  README_CN.md
(+28 files in other folders)
